--- a/_config.yml
+++ b/_config.yml
@@ -27,18 +27,18 @@ paginate_path: "/articles/page:num/"  # link scheme for articles, should be letf
 # Used to define the navigation menu items
 # > Title is the tile of the navigation item, url the url and desc is the tooltip
 navigation:
-  - title: Research
+  - title: Research Projects
     url: /research/
-    desc: My research is about
-  - title: Work
+    desc: My research interests
+  - title: Professional Experience
     url: /work/
     desc: Professional Experience
-  - title: Curriculum Vitae
+  - title: Curriculum Vitae & Contact
     url: /resume/
     desc: My resume
-  - title: Contact
-    url: /contact/
-    desc: Contact information
+  - title: Miscellaneous 
+    url: /articles/
+    desc: Miscellaneous Details
 
 # Used by Jekyll to recognize what is a post and what is a page
 defaults:
