--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navigation:
     url: /research/
     desc: My research interests
   - title: Experience
-    url: /work/
+    url: /experience/
     desc: Professional Experience
   - title: C.V. & Contact
     url: /resume/
