move the footer around

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink: /:year/:title/   # how should we display posts url
 email: adityapakki@gmail.com
 author: Aditya Pakki
 twitter_username: amthunderbird
-facebook_username: Aditya Pakki
+facebook_username: aditya.pakk1 #username
 github_username: adityapakki
 
 # Put your ga tracking code below
