change the home logo

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ paginate_path: "/articles/page:num/"  # link scheme for articles, should be letf
 # Used to define the navigation menu items
 # > Title is the tile of the navigation item, url the url and desc is the tooltip
 navigation:
+  - title: Home
+    url: /about/
+    desc: Welcome to my home page
   - title: Research
     url: /research/
     desc: My research interests
