--- a/_config.yml
+++ b/_config.yml
@@ -44,10 +44,10 @@ navigation:
     desc: Professional Experience
   - title: Contact
     url: /contact/
-    desc: Contcting me
+    desc: Contacting me
   - title: Personal
     url: /articles/
-    desc: Miscellaneous Details
+    desc: Miscellaneous 
 
 # Used by Jekyll to recognize what is a post and what is a page
 defaults:
