--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ navigation:
   - title: Contact
     url: /contact/
     desc: Contacting me
-  - title: Personal
-    url: /articles/
-    desc: Miscellaneous 
+#  - title: Personal
+#    url: /articles/
+#    desc: Miscellaneous 
 
 # Used by Jekyll to recognize what is a post and what is a page
 defaults:
