push social media handles

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink: /:year/:title/   # how should we display posts url
 email: adityapakki@gmail.com
 author: Aditya Pakki
 twitter_username: amthunderbird
-facebook_username: aditya.pakk1 #username
+facebook_username: aditya.pakki #username
 github_username: adityapakki
 linkedin_username: aditya-pakki-265a9525
 quora_username: Aditya-Pakki-1
